--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,47 +1,58 @@
-.main-content{
+.header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 10px 0;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+}
+
+.header-left {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
 }
 
-.navbar{
+.header-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: white;
+}
+
+.navbar {
     display: flex;
 }
 
-.menu{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding: 20px;
-    max-width: 150ch;
-    gap: 100px;
+.menu {
+    display: flex;
+    gap: 200px;
 }
 
-.menu-item{
-    background: rgb(9,9,121);
-    background: linear-gradient(90deg, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 0%);
-    box-shadow: 0 0 1.5em rgba(255,255,255,1);
+.menu-item {
+    font-weight: bold;
     border-radius: 10px;
+    padding: 8px 12px;
+    text-align: center;
+    transition: border-width 0.6s linear;
+}
+
+.menu-item:after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: white;
+    transition: width .3s;
+}
+
+.menu-item:hover::after {
+    width: 100%;
+}
+
+.menu-item p {
     font-size: 1.2rem;
     color: white;
-    padding: 8px 12px;
-    transition: 0.2s;
-    opacity: 1;
-    text-align: center;
-    color: white;
-}
-
-.menu-item:hover{
-    background: rgb(9,9,121);
-    background: linear-gradient(90deg, rgba(9,9,121,1) 0%, rgba(0,190,255,1) 0%);
-    opacity: 0.7;
-}
-
-.menu-item h2{
-    color: white;
-}
-
-.menu-item p{
-    color: white;
-    padding: 10px;
 }
