--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
 @import url(./utility/reset.css);
 @import url(./utility/global.css);
 @import url(./pages/home.css);
+@import url(./pages/header/header.css);
