--- a/css/utility/global.css
+++ b/css/utility/global.css
@@ -1,6 +1,13 @@
 body {
-    background: rgb(9, 9, 121);
-    background: linear-gradient(90deg, rgba(9, 9, 121, 1) 0%, rgba(0, 212, 255, 1) 0%);
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    font-family: 'Roboto', sans-serif;
+    color: white;
+}
+
+a{
+    text-decoration: none;
+    color: #fff;
 }
 
 .flex {
@@ -10,7 +17,6 @@ body {
 }
 
 .container {
-    display: flex;
     max-width: 1200px;
     margin: 0 auto;
 }
