--- a/css/pages/header/header.css
+++ b/css/pages/header/header.css
@@ -5,7 +5,7 @@
     align-items: center;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 10px 0;
+    padding: 10px;
     color: white;
 }
 .header-top{
@@ -31,7 +31,7 @@
 
 .menu {
     display: flex;
-    gap: 200px;
+    gap: 20px;
 }
 
 .menu-item {
