--- a/css/pages/home/home.css
+++ b/css/pages/home/home.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     text-align: justify;
-    padding: 100px 0;
+    padding: 100px 10px;
 }
 
 .main-language-descrip{
@@ -37,11 +37,11 @@
 }
 
 .main-menu-item{
-    box-shadow: 0 0 1.5rem #f5f5f5;
     border: 1px solid #f5f5f5;
     border-radius: 10px;
     padding: 10px;
     max-width: 40ch;
+    background: rgba(0,245,255,0.3)
 }
 
 .main-menu-title{
