--- a/css/pages/header/header.css
+++ b/css/pages/header/header.css
@@ -20,7 +20,7 @@
 }
 
 .header-title {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-weight: bold;
     color: white;
 }
@@ -58,4 +58,21 @@
 .menu-item p {
     font-size: 1.2rem;
     color: white;
+}
+
+@media (max-width: 768px) {
+    .header {
+        flex-direction: column;
+        align-items: center;
+    }
+    .menu {
+        gap: 10px;
+    }
+    .menu-item {
+        padding: 10px;
+    }
+    .menu-item p {
+        padding-top: 10px;
+        font-size: 1.2rem;
+    }
 }
