--- a/css/utility/global.css
+++ b/css/utility/global.css
@@ -1,6 +1,8 @@
 body {
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    background-size: 400% 400%;
+    animation: backgroundTransition 15s ease infinite;
     font-family: 'Roboto', sans-serif;
     color: white;
 }
@@ -19,4 +21,16 @@ a{
 .container {
     max-width: 1200px;
     margin: 0 auto;
+}
+
+@keyframes backgroundTransition {
+    0% {
+        background-position: 0% 80%;
+    }
+    50% {
+        background-position: 80% 100%;
+    }
+    100% {
+        background-position: 0% 90%;
+    }
 }
