--- a/css/pages/home/home.css
+++ b/css/pages/home/home.css
@@ -39,6 +39,7 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+    padding-top: 50px;
 }
 
 .card {
@@ -136,6 +137,7 @@
 
     .card-container {
         margin: 0 auto;
+        gap: 20px;
         flex-direction: column;
     }
 
@@ -143,8 +145,8 @@
         font-size: 30px;
     }
 
-    .container .card-container:nth-child(2),
-    .container .card-container:nth-child(4) {
+    .container .card-container:nth-child(1),
+    .container .card-container:nth-child(3) {
         flex-direction: column-reverse;
     }
 
